# python_clean_architecture

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: github-action.yml
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
nginx/: default.conf
scripts/: entrypoint.sh  start_api.sh
src/application/: urls.py
src/application/admin_panel/: admin.py
src/application/admin_panel/admin/: __init__.py  account.py  currency.py
src/application/authentication/responses/: token_vm.py  user_vm.py
src/application/authentication/validations/: authentication_validation.py
src/application/common/: mediator_registers.py
src/application/common/exceptions/: authentication_exceptions.py  entity_already_exist_exception.py  entity_does_not_exist_exception.py  entity_incorrect_format_exception.py
src/application/common/mappings/: mapper.py
src/application/config/: asgi.py  urls.py  wsgi.py
src/application/config/settings/: base.py  development.py  production.py
src/application/currency/queries/: get_currencies_list_query.py  get_currencies_list_query_handler.py
src/application/currency/responses/: currency_detail_vm.py  currency_vm.py
src/application/interfaces/: account_view.py  authentication_view.py  base_view.py  currency_view.py
src/application/presenters/: account_presenter.py  authentication_presenter.py  currency_presenter.py
src/application/serializers/: account.py  currency.py
src/application/views/: account.py  currency.py
src/domain/: value_objects.py
src/domain/dtos/: currency_dtos.py
src/domain/entities/: account.py  currency.py  handbook.py
src/infrastructure/: constaints.py  middleware.py
src/infrastructure/loggers/: logger_default.py
src/infrastructure/managers/: __init__.py  account.py
src/infrastructure/migrations/: 0001_initial.py  0002_rename_is_verify_user_is_verified.py  0003_remove_user_phone_remove_user_role_user_first_name_and_more.py
src/infrastructure/models/: __init__.py  account.py  base.py  currency.py  wallet.py
src/infrastructure/providers/: token_provider.py
src/infrastructure/repositories/: account_repository.py  authentication_repository.py  base_repository.py  currency_repository.py
src/infrastructure/repotisories/: account_repository.py  currency_repository.py
src/infrastructure/services/: auth_service.py
src/interactor/dtos/: account_dtos.py  authentication_dtos.py  currency_dtos.py
src/interactor/errors/: error_classes.py
src/interactor/interfaces/logger/: logger.py
src/interactor/interfaces/presenters/: account_presenter.py  authentication_presenter.py  base_presenter.py  currency_presenter.py
src/interactor/interfaces/providers/: token_provider.py
src/interactor/interfaces/repositories/: account_repository.py  authentication_repository.py  currency_repository.py
src/interactor/interfaces/repotisories/: account_repository.py  base_repository.py  currency_repository.py
src/interactor/use_cases/: account.py  authentication.py  currency.py  notification.py
src/interactor/validations/: account_validation.py  currency_validation.py
src/interface/presenters/: currency_presenter.py
src/interface/repotisories/: currency_repository.py
src/presentation/admin_panel/admin/: account.py
src/presentation/rest_api/: urls.py
src/presentation/rest_api/config/: asgi.py  containers.py  urls.py  wsgi.py
src/use_cases/: currency.py
tests/application/views/: test_currency.py
tests/domain/entities/: test_account.py  test_currency.py  test_handbook.py
tests/infrastructure/factories/: currency_factory.py
tests/infrastructure/repositories/: test_currency.py
tests/infrastucture/factories/: currency_factory.py
tests/infrastucture/repositories/: test_currency.py
tests/infrastucture/repotisories/: test_currency.py
tests/interactor/dtos/: test_create_currency_dto.py
tests/interactor/use_cases/: test_currency.py
tests/interactor/validations/: test_currency.py
(+38 files in other folders)
