[project]
name = "python-clean-architecture"
version = "0.1.0"
description = "Python Clean Architecture Template"
authors = ["Azizjon <azizaliev2337@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
    "django-cors-headers>=4.6.0",
    "drf-spectacular>=0.27.2",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "djangorestframework>=3.15.2",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "django-stubs>=5.1.1",
    "factory-boy>=3.3.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-django>=4.9.0",
    "ruff>=0.7.3",
]
